--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
             file_name: (a.getAttribute('href') || '').split('/').pop() || 'unknown',
             page_path: location.pathname,
             page_title: document.title,
-            language: lang
+            // detect language from the link itself:
+            language: (a.getAttribute('href') || '').includes('/es/') ? 'es' :
+                        (a.getAttribute('href') || '').includes('/en/') ? 'en' : 'unknown',
+            transport_type: 'beacon'
             });
         }, { passive: true });
         });
@@ -49,17 +52,18 @@
 
     // Track clicks to the CV page
     function bindViewCvTracking() {
-        document.querySelectorAll('a[href*="Curriculum.html"]').forEach(a => {
+    document.querySelectorAll('a[href*="Curriculum.html"]').forEach(a => {
         a.addEventListener('click', () => {
-            const lang = a.href.includes('/es/') ? 'es' :
-                        a.href.includes('/en/') ? 'en' : 'unknown';
-            gtag('event', 'view_cv_page', {
+        const lang = a.href.includes('/es/') ? 'es' :
+                    a.href.includes('/en/') ? 'en' : 'unknown';
+        gtag('event', 'view_cv_page', {
             link_href: a.getAttribute('href'),
             language: lang,
-            page_path: location.pathname
-            });
-        }, { passive: true });
+            page_path: location.pathname,
+            transport_type: 'beacon'
         });
+        }, { passive: true });
+    });
     }
 
     // Init tracking when DOM is ready
