--- a/pages/es/Curriculum.html
+++ b/pages/es/Curriculum.html
@@ -110,7 +110,7 @@
         <!-- Curriculum section with embedded PDF and download link -->
         <section class="cv">
             <h2>Mi curriculum</h2>
-            <p>Puedes enecontrarlo para lectura o descargarlo aquí debajo:</p>
+            <p>Puedes encontrarlo para lectura o descargarlo aquí debajo:</p>
             
             <!-- Embedded PDF of the curriculum -->
             <div class="pdf-container">
